tests/misc_tests/stw_ui_tests/stw_macro_privacy-err.rs
use typewit::MakeTypeWitness;

mod private {
    typewit::simple_type_witness!{
        enum Private {
            U8 = u8
        }
    }    
}


fn main(){
    let _: private::Private<u8> = MakeTypeWitness::MAKE;
}